--- a/.github/workflows/checkupdates3.yml
+++ b/.github/workflows/checkupdates3.yml
@@ -129,8 +129,9 @@ jobs:
         run: |
           echo "::notice::Attempting to execute external script .github/scripts/main_task_script.sh"
           # Ensure the script is executable inside the container if permissions were lost
-          chmod +x ${GITHUB_WORKSPACE}/scripts/main_task_script.sh 
-          ${GITHUB_WORKSPACE}/scripts/main_task_script.sh # Execute the script
+          cp ${GITHUB_WORKSPACE}/scripts/main_task_script.sh /home/builder/nvchecker-run/
+          chmod +x /home/builder/nvchecker-run/main_task_script.sh 
+          /home/builder/nvchecker-run/main_task_script.sh 
 
       - name: Upload build logs and artifacts
         if: always()
