--- a/.github/workflows/checkupdates3.yml
+++ b/.github/workflows/checkupdates3.yml
@@ -128,6 +128,7 @@ jobs:
           SECRET_GHUK_VALUE: ${{ secrets.GHuK }}
         run: |
           echo "::notice::Attempting to execute external script main_task_script.sh"
+          echo `which bash`
           # Ensure the script is executable inside the container if permissions were lost
           mkdir -p task
           cp ${GITHUB_WORKSPACE}/scripts/main_task_script.sh task/
