--- a/.github/workflows/checkupdates3.yml
+++ b/.github/workflows/checkupdates3.yml
@@ -126,6 +126,8 @@ jobs:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           AUR_MAINTAINER_NAME: ${{ env.AUR_MAINTAINER_NAME }}
           SECRET_GHUK_VALUE: ${{ secrets.GHuK }}
+          GITHUB_REPOSITORY: ${{ github.repository }}
+          GITHUB_RUNID: ${{ github.runid }}
         run: |
           echo "::notice::Attempting to execute external script main_task_script.sh"
           # Ensure the script is executable inside the container if permissions were lost
