--- a/.github/workflows/checkupdates3.yml
+++ b/.github/workflows/checkupdates3.yml
@@ -120,11 +120,13 @@ jobs:
           echo "Git configuration complete."
           echo "::endgroup::"
 
-      - name: Run Arch Package Update and Build Task # Debugging new build section
+      - name: Run AUR Package Build and Update Task # Debugging new build section
         shell: bash
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          AUR_MAINTAINER_NAME: ${{ env.AUR_MAINTAINER_NAME }}
+          AUR_MAINTAINER_NAME: envolution
+          GIT_COMMIT_USER_NAME: envolution
+          GIT_COMMIT_USER_EMAIL: involution@gmail.com
           SECRET_GHUK_VALUE: ${{ secrets.GHuK }}
           GITHUB_REPOSITORY: ${{ github.repository }}
           GITHUB_RUNID: ${{ github.runid }}
@@ -134,8 +136,6 @@ jobs:
           mkdir -p task
           cp ${GITHUB_WORKSPACE}/scripts/main_task_script.sh task/
           chmod +x task/main_task_script.sh 
-          ls -la task
-          file task/main_task_script.sh
           ./task/main_task_script.sh 
 
       - name: Upload build logs and artifacts
