--- a/.github/workflows/consolidated.yml
+++ b/.github/workflows/consolidated.yml
@@ -1,6 +1,6 @@
 name: Consolidated Arch Package Updater
 on:
-  schedule:
+  #schedule:
   #  - cron: '0 */12 * * *' # Runs every 12 hours
   workflow_dispatch:      # Allows manual triggering
 
