--- a/.github/workflows/consolidated.yml
+++ b/.github/workflows/consolidated.yml
@@ -30,8 +30,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
+        #with:
+        #  fetch-depth: 0
 
       - name: Initialize pacman, update system, and install dependencies
         run: |
