--- a/.github/workflows/consolidated.yml
+++ b/.github/workflows/consolidated.yml
@@ -121,28 +121,59 @@ jobs:
 
       - name: Prepare and Execute Main Python Script
         shell: bash
+        env: # Pass GHA env vars to the Python script explicitly if needed by Python's os.getenv
+          # Python script already uses os.getenv for these, so they are inherited.
+          # The main point is to get the SCRIPT_PATH correct for the shell commands here.
+          AUR_MAINTAINER_NAME: ${{ env.AUR_MAINTAINER_NAME }}
+          GITHUB_REPO_OWNER_SLASH_NAME: ${{ env.GITHUB_REPO_OWNER_SLASH_NAME }}
+          PKGBUILD_FILES_ROOT: ${{ env.PKGBUILD_FILES_ROOT }}
+          GIT_COMMIT_USER_NAME: ${{ env.GIT_COMMIT_USER_NAME }}
+          GIT_COMMIT_USER_EMAIL: ${{ env.GIT_COMMIT_USER_EMAIL }}
+          GH_TOKEN_FOR_RELEASES_AND_NVCHECKER: ${{ env.GH_TOKEN_FOR_RELEASES_AND_NVCHECKER }}
+          AUR_SSH_PRIVATE_KEY_CONTENT: ${{ env.AUR_SSH_PRIVATE_KEY_CONTENT }}
+          ACTIONS_STEP_DEBUG: ${{ env.ACTIONS_STEP_DEBUG }}
+          GITHUB_RUN_ID_FOR_ARTIFACTS: ${{ env.GITHUB_RUN_ID_FOR_ARTIFACTS }}
+          GITHUB_STEP_SUMMARY_FILE_PATH: ${{ env.GITHUB_STEP_SUMMARY_FILE_PATH }}
         run: |
           set -e
           echo "::group::Execute Main Python Script"
-          SCRIPT_DIR="${{ github.workspace }}/scripts" # Assuming your consolidated script is here
-          MAIN_SCRIPT_NAME="arch_package_manager.py" # Name of your consolidated script
           
-          if [ ! -f "${SCRIPT_DIR}/${MAIN_SCRIPT_NAME}" ]; then
-            echo "::error title=Script Missing::Consolidated script ${SCRIPT_DIR}/${MAIN_SCRIPT_NAME} not found!"
+          # github.workspace is the root of the checked-out repository.
+          # e.g., /home/runner/work/aur/aur if your repo is 'aur'
+          echo "GITHUB_WORKSPACE is: ${{ github.workspace }}"
+          ls -la "${{ github.workspace }}" # List contents of workspace root
+          ls -la "${{ github.workspace }}/scripts" # List contents of scripts dir if it exists
+
+          # Define the expected path to the script RELATIVE to the workspace root
+          RELATIVE_SCRIPT_PATH="scripts/arch_package_manager.py"
+          ABSOLUTE_SCRIPT_PATH_IN_WORKSPACE="${{ github.workspace }}/${RELATIVE_SCRIPT_PATH}"
+          
+          echo "Checking for script at: ${ABSOLUTE_SCRIPT_PATH_IN_WORKSPACE}"
+          if [ ! -f "${ABSOLUTE_SCRIPT_PATH_IN_WORKSPACE}" ]; then
+            echo "::error title=Script Missing::Consolidated script ${ABSOLUTE_SCRIPT_PATH_IN_WORKSPACE} not found!"
+            echo "Listing directory structure for debugging:"
+            echo "Workspace root (${{ github.workspace }}):"
+            find "${{ github.workspace }}" -maxdepth 2 -ls
             exit 1
           fi
 
-          # Copy the script to a location accessible by builder, ensure it's executable
-          cp "${SCRIPT_DIR}/${MAIN_SCRIPT_NAME}" "/home/builder/${MAIN_SCRIPT_NAME}"
-          chown builder:builder "/home/builder/${MAIN_SCRIPT_NAME}"
-          chmod +x "/home/builder/${MAIN_SCRIPT_NAME}"
+          # Destination for the script in builder's home
+          BUILDER_SCRIPT_DEST="/home/builder/arch_package_manager.py"
+
+          echo "Copying script from ${ABSOLUTE_SCRIPT_PATH_IN_WORKSPACE} to ${BUILDER_SCRIPT_DEST}"
+          cp "${ABSOLUTE_SCRIPT_PATH_IN_WORKSPACE}" "${BUILDER_SCRIPT_DEST}"
+          chown builder:builder "${BUILDER_SCRIPT_DEST}"
+          chmod +x "${BUILDER_SCRIPT_DEST}"
 
           echo "Running the main package management script..."
           # Execute as builder, ensuring HOME is set for tools like gh, git, nvchecker
+          # Explicitly pass necessary env vars to sudo's environment
+          # Note: Most env vars set in the 'env:' block of the step are automatically available
+          # to the sudo command if using -E.
           sudo -E -u builder \
             HOME="/home/builder" \
-            PATH="/usr/bin \
-            python3 "/home/builder/${MAIN_SCRIPT_NAME}"
+            PATH="/usr/local/bin:/usr/bin:/bin:/usr/local/sbin:/usr/sbin:/sbin:/home/builder/.local/bin" \
+            python3 "${BUILDER_SCRIPT_DEST}"
           echo "::endgroup::"
 
       - name: Upload build logs and artifacts
